--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             </a>
 
             <ul class="left">
-                <li><a href="how.html">How it works</a></li>
+                <li><a href="/">How it works</a></li>
                 <li><a href="mailto:marcogreselin@me.com">Contacts</a></li>
             </ul>
 
