--- a/public/adblock.html
+++ b/public/adblock.html
@@ -87,7 +87,7 @@
 <header>
     <div class="xcon">
 
-            <img id="special" class="logo"src="images/logo.png">
+            <img id="special" class="logo"src="images/logo.png" onerror="this.src='../images/logo.png';">
         <p>
             <h1>Ahhh Your AdBlock is On!!</h1>
         </p>
@@ -98,7 +98,7 @@
 
     <p>We have noticed that your AdBlock is On. Didn't you know, AdBlock does not love AdCall.</p>
     <p>To offer you the best experience over here, just <a target="_blank" href="https://help.getadblock.com/support/solutions/articles/6000067131-how-do-i-whitelist-a-specific-youtube-channel-">whitelist</a> AdCall and then refresh.</p>
-    <img class="nolove" src="images/no-love.png" alt="">
+    <img class="nolove" src="images/no-love.png" alt="No Love" onerror="this.src='../images/no-love.png';">
 </main>
 
 
