--- a/public/experiments.html
+++ b/public/experiments.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <script src="https://simplewebrtc.com/latest-v2.js"></script>
 </head>
 <body>
-<input id="inpx" type="text" name="fname">
-
+<video id="localVideo"></video>
+<div id="remoteVideos"></div>
 <script src="/socket.io/socket.io.js"></script>
-<button id="b">
-    Submit
-</button>
-<div id="resx"></div>
-<!--JQuery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script>
+    var socket = io();
+    socket.emit('request', 45);
+</script>
 
 <script>
-    var socket = io.connect('/');
-    socket.on('connect', function(){
-        console.log('connected')
-    });
-    socket.on('disconnect', function(){
-        console.log('disconnected');
+    var webrtc = new SimpleWebRTC({
+        // the id/element dom element that will hold "our" video
+        localVideoEl: 'localVideo',
+        // the id/element dom element that will hold remote videos
+        remoteVideosEl: 'remoteVideos',
+        // immediately ask for camera access
+        autoRequestMedia: true,
+        media: { audio: true }
+
     });
 
-    $("#b").click(function(){
-        socket.emit("typeit", $("#inpx").val());
-        $("#resx").append("ME: "+$("#inpx").val()+"<br>");
-        $("#inpx").val('');
+    webrtc.on('readyToCall', function () {
+        // you can name it anything
+        webrtc.joinRoom('64');
     });
-    socket.on("newmessage", function(nm){
-        $("#resx").append("SOMEONEELSE: "+nm+"<br>");
-    })
-
 </script>
 </body>
 </html>
