--- a/public/experiments.html
+++ b/public/experiments.html
@@ -9,25 +9,8 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
     var socket = io();
-    socket.emit('request', 45);
+    socket.emit('incomingCall', 45);
 </script>
 
-<script>
-    var webrtc = new SimpleWebRTC({
-        // the id/element dom element that will hold "our" video
-        localVideoEl: 'localVideo',
-        // the id/element dom element that will hold remote videos
-        remoteVideosEl: 'remoteVideos',
-        // immediately ask for camera access
-        autoRequestMedia: true,
-        media: { audio: true }
-
-    });
-
-    webrtc.on('readyToCall', function () {
-        // you can name it anything
-        webrtc.joinRoom('64');
-    });
-</script>
 </body>
 </html>
