beginning of webrtc

--- a/public/experiments.html
+++ b/public/experiments.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--<script src="https://simplewebrtc.com/latest-v2.js"></script>-->
+    <script src="https://simplewebrtc.com/latest-v2.js"></script>
 </head>
 <body>
 
 
 <div id="adcall"></div>
-<script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script><script>
-    var publisherId=71;
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script>
+    var publisherId=15;
 </script>
 <script src="bannerSever.js"></script>
 
 
 
-<!--<video id="localVideo"></video>-->
-<!--<div id="remoteVideos"></div>-->
-<!--<script src="/socket.io/socket.io.js"></script>-->
+<script src="/socket.io/socket.io.js"></script>
 <script>
 //    var socket = io();
 //    socket.emit('incomingCall', 45);
 </script>
+
+
 
 </body>
 </html>
