--- a/public/demo.html
+++ b/public/demo.html
@@ -1,30 +1,106 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        @font-face {
+            font-family: 'FontAwesome';
+            src: url("stylesheets/fonts/Asap-Regular.otf") format("opentype"); }
+
+        #adcall{
+            height:300px;
+            width: 300px;
+            position: relative;
+            overflow: hidden;
+        }
+        #adcall video{
+            height:100%;
+            width: 100%;
+            position: absolute;
+
+        }
+        body {
+            background: linear-gradient(#FFFAA4, #4ED8FF) fixed;
+            font-family: FontAwesome, Helvetica, sans-serif!important;
+        }
+        #logo {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+        #title {
+            text-align: left;
+            font-size: 50px;
+        }
+        #article {
+            border: 3px black solid;
+            border-radius: 5px;
+            padding: 10px;
+            margin-bottom: 30px;
+        }
+        #adcall {
+            float: left;
+            margin: 10px;
+            margin-right: 20px;
+
+        }
+
+    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+
     <script src="https://simplewebrtc.com/latest-v2.js"></script>
 </head>
 <body>
+    <div class="container">
+        <img id="logo" width="50%" src="images/times.png" alt="">
+        <div id="article">
+            <div id="title">AIA To Held Final Pitches</div>
 
-<style>
-    #adcall{
-        height:300px;
-        width: 300px;
-        position: relative;
-        overflow: hidden;
-    }
-    #adcall video{
-        height:100%;
-        width: 100%;
-        position: absolute;
+            <div class="text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.
+                </p>
+                <p>
+                <div id="adcall"></div>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+                <script>
+                    var publisherId=15;
+                </script>
+                <script src="bannerSever.js"></script>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.
+                </p>
+            </div>
 
-    }
-</style>
-<div id="adcall"></div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script>
-    var publisherId=15;
-</script>
-<script src="bannerSever.js"></script>
+
+        </div>
+    </div>
+
 
 
 
@@ -37,4 +113,6 @@
 
 
 </body>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+
 </html>
