--- a/public/demo.html
+++ b/public/demo.html
@@ -70,7 +70,7 @@
                 <script>
                     var publisherId=15;
                 </script>
-                <script src="bannerSever.js"></script>
+                <script src="bannerServer.js"></script>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                     ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
